# arbPlusJAX

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  IMPLEMENTATION_SUMMARY.md  LICENSE  NOTICE  README.md  SECURITY.md  SUPPORT.md  arbPlusJAX-linux.code-workspace  arbPlusJAX-windows.code-workspace  arbPlusJAX.code-workspace  pyproject.toml  requirements-colab.txt  requirements-compare.txt
benchmarks/: README.md  _source_tree_bootstrap.py  bench_harness.py  bench_registry.py  bench_report.py  benchmark_acb_calc.py  benchmark_acb_dirichlet.py  benchmark_acb_elliptic.py  benchmark_acb_mat.py  benchmark_acb_modular.py  benchmark_acb_poly.py  benchmark_acf.py  benchmark_api_surface.py  benchmark_arb_calc.py  benchmark_arb_fmpz_poly.py  benchmark_arb_fpwrap.py  benchmark_arb_mat.py  benchmark_arb_poly.py  benchmark_arf.py  benchmark_barnes_double_gamma.py  benchmark_bernoulli.py  benchmark_block_sparse_matrix_surface.py  benchmark_bool_mat.py  benchmark_core_scalar_batch_padding.py  benchmark_core_scalar_service_api.py  benchmark_dense_matrix_surface.py  benchmark_dirichlet.py  benchmark_dlog.py  benchmark_fft_nufft.py  benchmark_fmpr.py  benchmark_fmpz_extras.py  benchmark_fmpzi.py  benchmark_gamma_compare.py  benchmark_hypgeom.py  benchmark_hypgeom_extra.py  benchmark_incomplete_bessel.py  benchmark_loggamma_compare.py  benchmark_mag.py  benchmark_matrix_backend_candidates.py  benchmark_matrix_free_krylov.py  (+68 more)
benchmarks/native/: CMakeLists.txt  boost_ref_adapter.cpp
configs/: README.md  cpu_validation_profiles.json  optional_comparison_backends.json  platform_bootstrap_profiles.json
contracts/: README.md  capability_registry_contract.md  dtype_and_precision_contract.md  matrix_surface_contract.md  public_api_mode_contract.md  public_api_selection_contract.md  sparse_layout_operator_contract.md  stable_kernel_subset_contract.md
docs/: Makefile  README.md  abbreviations.bib  acb_calc.md  acb_core.md  acb_dirichlet.md  acb_elliptic.md  acb_mat.md  acb_modular.md  acb_poly.md  acf.md  arb_calc.md  arb_core.md  arb_fmpz_poly.md  arb_fpwrap.md  arb_mat.md  arb_poly.md  architecture.md  arf.md  audit.md  ball_wrappers.md  barnesg.md  baseline_wrappers.md  benchmark_process.md  benchmarks.md  bernoulli.md  bool_mat.md  build.md  calc_wrappers.md  conf.py  core_wrappers.md  dft.md  dft_wrappers.md  dirichlet.md  dirichlet_wrappers.md  dlog.md  documentation_governance.md  double_gamma.md  double_interval.md  double_interval_wrappers.md  (+25 more)
examples/: README.md  example_all_modes_sweep.ipynb  example_api_surface.ipynb  example_barnes_double_gamma_surface.ipynb  example_bessel_modes_sweep.ipynb  example_calc_modes_demo.ipynb  example_core_modes_sweep.ipynb  example_core_scalar_surface.ipynb  example_dense_matrix_surface.ipynb  example_dense_structured_spectral.ipynb  example_dirichlet_surface.ipynb  example_fft_nufft_surface.ipynb  example_gamma_family_surface.ipynb  example_hypgeom_family_surface.ipynb  example_hypgeom_robust_modes_sweep.ipynb  example_large_sweeps_progress.ipynb  example_latent_gaussian_laplace.py  example_matrix_free_operator_surface.ipynb  example_run_suite.py  example_sparse_matrix_surface.ipynb  example_special_modes_sweep.ipynb  matfree_adjoints_examples.py
experiments/: README.md
notebooks/: calc_modes_demo.ipynb
outputs/: README.md
papers/: README.md
results/: audit_20260222T171931Z.md  audit_20260314T154126Z.md  compare_hypgeom_20260222T014536Z.txt  compare_hypgeom_20260222T043248Z.txt  compare_mpmath_20260222T153439Z.txt  hypgeom_tests_20260223T185306Z.txt  hypgeom_tests_20260223T190128Z.txt  hypgeom_tests_20260223T190502Z.txt  missing_acb_hypgeom.txt  (+5 more)
stuff/migration/c_chassis/: CMakeLists.txt
stuff/migration/c_chassis/include/: acb_calc_ref.h  acb_core_ref.h  acb_dirichlet_ref.h  acb_elliptic_ref.h  acb_mat_ref.h  acb_modular_ref.h  acb_poly_ref.h  acf_ref.h  arb_calc_ref.h  arb_core_ref.h  arb_fmpz_poly_ref.h  arb_fpwrap_ref.h  arb_mat_ref.h  arb_poly_ref.h  arf_ref.h  bernoulli_ref.h  bool_mat_ref.h  dft_ref.h  dirichlet_ref.h  dlog_ref.h  double_interval_ref.h  fmpr_ref.h  fmpz_extras_ref.h  fmpzi_ref.h  hypgeom_ref.h  mag_ref.h  partitions_ref.h
stuff/migration/c_chassis/src/: acb_calc_ref.c  acb_core_ref.c  acb_dirichlet_ref.c  acb_elliptic_ref.c  acb_mat_ref.c  acb_modular_ref.c  acb_poly_ref.c  acf_ref.c  arb_calc_ref.c  arb_core_ref.c  arb_fmpz_poly_ref.c  arb_fpwrap_ref.c  arb_mat_ref.c  arb_poly_ref.c  arf_ref.c  bernoulli_ref.c  bool_mat_ref.c  dft_ref.c  dirichlet_ref.c  dlog_ref.c  double_interval_ref.c  fmpr_ref.c  fmpz_extras_ref.c  fmpzi_ref.c  hypgeom_ref.c  mag_ref.c  partitions_ref.c
stuff/migration/jax_chassis/: pyproject.toml
stuff/migration/jax_chassis/arbjax/: __init__.py  acb_calc.py  acb_core.py  acb_dirichlet.py  acb_elliptic.py  acb_mat.py  acb_modular.py  acb_poly.py  acf.py  arb_calc.py  arb_fmpz_poly.py  arb_mat.py  arb_poly.py  bool_mat.py  dft.py  dirichlet.py  double_interval.py  fmpr.py  fmpz_extras.py  fmpzi.py  hypgeom.py  partitions.py  validation.py
stuff/migration/jax_chassis/tests/: test_acb_calc_chassis.py  test_acb_calc_parity.py  test_acb_core_chassis.py  test_acb_core_parity.py  test_acb_dirichlet_chassis.py  test_acb_dirichlet_parity.py  test_acb_elliptic_chassis.py  test_acb_elliptic_parity.py  test_acb_mat_chassis.py  test_acb_mat_parity.py  test_acb_modular_chassis.py  test_acb_modular_parity.py  test_acb_poly_chassis.py  test_acb_poly_parity.py  test_acf_chassis.py  test_acf_parity.py  test_arb_calc_chassis.py  test_arb_calc_parity.py  test_arb_core_chassis.py  test_arb_core_parity.py  test_arb_fmpz_poly_chassis.py  test_arb_fmpz_poly_parity.py  test_arb_fpwrap_chassis.py  test_arb_fpwrap_parity.py  test_arb_mat_chassis.py  test_arb_mat_parity.py  test_arb_poly_chassis.py  test_arb_poly_parity.py  test_arf_chassis.py  test_arf_parity.py  test_bernoulli_chassis.py  test_bernoulli_parity.py  test_bool_mat_chassis.py  test_bool_mat_parity.py  test_dft_chassis.py  test_dft_parity.py  test_dirichlet_chassis.py  test_dirichlet_parity.py  test_dlog_chassis.py  test_dlog_parity.py  (+15 more)
(+9649 files in other folders)
