[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "arbPlusJAX"
version = "1.1.0"
description = "Independent JAX implementation derived from Arb and FLINT, with C parity tooling."
requires-python = ">=3.10"
license = "LGPL-3.0-or-later"
dependencies = [
  "jax>=0.4.35,<0.9; python_version < '3.11'",
  "jax>=0.4.35; python_version >= '3.11'",
  "numpy>=1.26",
  "scipy>=1.10",
  "pytest>=8.0",
]
classifiers = [
  "License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)",
]

[project.optional-dependencies]
petsc = [
  "petsc4py",
  "slepc4py",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
arbplusjax = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests", "benchmarks"]
markers = [
  "parity: tests that require the C reference libraries",
  "benchmark: optional benchmark checks and benchmark harness smoke tests",
]

[tool.ruff]
line-length = 120
